# PotatoAuth

./: .gitignore  Cargo.toml  README.md  build.sh  potato_auth.nginx.conf
run scripts/: potato_auth.service
src/: app.rs  config.rs  file_utils.rs  logging.rs  main.rs  sessions.rs  shared_data.rs  userdb.rs
src/routes/: admin.rs  auth_request.rs  login.rs  logout.rs  mod.rs  setup.rs  static_dir.rs
src/routes/rpc/: add_user.rs  list_users.rs  mod.rs  remove_user.rs  restart_server.rs  update_user.rs
static/: admin.html  alerts.js  login.html  logout.html  reloader.js  setup.html  styles.css
